Align block fix text size

--- a/src/Pages/AboutMe/styles/styles.scss
+++ b/src/Pages/AboutMe/styles/styles.scss
@@ -17,12 +17,17 @@
   padding: 1rem 0 3rem 0;
   &__flex {
    display: flex;
+   align-items: center;
+   justify-content: center;
    margin: 0;
    padding: 0;
    .col-1 {
     padding: 0 5%;
+    max-width: 700px;
    }
    .col-2 {
+    max-width: 700px;
+
     align-self: center;
     padding-right: 5%;
    }
