--- a/src/StyleComponents/Block/styles/styles.scss
+++ b/src/StyleComponents/Block/styles/styles.scss
@@ -18,7 +18,7 @@
   margin-right: 1rem;
   padding: 1rem;
   font-family: $f-fam-p;
-  font-size: calc(1vw + 0.1rem);
+  font-size: 0.8rem;
   line-height: 1.4;
   font-weight: 300;
   text-align: left;
